2008-07-11  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override: wrap File.load_contents, fix a typo.

	* gio/gio.defs: Add docstring for File.load_contents.

	* tests/test_gio.py: Add a test for the above method.

2008-07-09  Juha Sahakangas  <voas0113@saunalahti.fi>

	* gobject/gobjectmodule.c (pyg_io_add_watch): Fix error message
	referencing wrong argument.

2008-06-29  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (pyg_markup_escape_text): text_size
	should be Py_ssize_t instead of int.
	Bug 540696 – gobject.markup_escape_text() causes python to segfault.

2008-06-28  Johan Dahlin  <jdahlin@async.com.br>

	* docs/reference/pygobject.xml:
	Document GObject.handler_block_by_func/handler_unblock_by_func

2008-06-17  Johan Dahlin  <jdahlin@async.com.br>

	* gio/gio-types.defs:
	* tests/test_gio.py:
	Sort out confusion between interfaces and objects, add test.
	Fixes #538601

2008-06-09  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gobject/pygobject.c (pygobject_copy, pygobject_deepcopy): New
	functions, unconditionally raise TypeError.
	(pygobject_methods): Hook them up. (bug #482370)

2008-05-31  Johan Dahlin  <johan@gnome.org>

    * setup.py: set FFI_LIBS to '', since this is mostly used on win32.

2008-05-30  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (init_gobject): Call PyType_Ready for
	PyGParamSpec_Type, and add it to the module dict.

2008-05-23  Johan Dahlin  <jdahlin@async.com.br>

	* gio/gio.defs:
	Add default values for all GSeekType variables.

2008-05-21  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (pyg_spawn_async): Accept None for the
	child_setup parameter of gobject.spawn_async().  Also check that
	it is callable.

2008-04-27  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gobject/pygenum.c (pyg_enum_richcompare): Fix: raise warning as
	exception if asked by PyErr_Warn().

	* gobject/pygflags.c (pyg_flags_richcompare):  Don't return NULL